kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: enterprise-cicd

  labels:
    app: enterprise-cicd-platform
    environment: production
    managed-by: kubernetes
