kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: enterprise-cicd-service
  namespace: enterprise-cicd

  labels:
    app: enterprise-cicd-platform

spec:

  # Internal Kubernetes service
  type: ClusterIP

  # Expose application on port 80
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080

  # Send traffic to Pods with this label
  selector:
    app: enterprise-cicd-platform
